# nscout

./: .gitignore  README.md  pyproject.toml
namescout/: cli.py
namescout.egg-info/: PKG-INFO
nscout/: cache.py  checker.py  cli.py
