[project]
name = "namescout"
version = "0.1.0"
description = "A lightweight CLI tool to check whether a package name is taken on PyPI and TestPyPI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx"]

license = "MIT"

authors = [{ name = "Abishek S", email = "abishek642005@gmail.com" }]

classifiers = [
    "Development Status :: Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Environment :: Console",
    "Topic :: Utilities :: Libraries :: Python Modules",
]

# Setuptools package discovery
[tool.setuptools.packages.find]
include = ["namescout"]

[project.scripts]
namescout = "namescout.cli:main"
