[project]
name = "nscout"
version = "0.2.0"
description = "A lightweight CLI tool to check whether a package name is taken on PyPI and TestPyPI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx"]

license = "MIT"

authors = [
    { name = "Abishek S", email = "abishek642005@gmail.com" }
]

keywords = [
    "namespace",
    "registry",
    "discovery",
    "resolution",
    "identifier",
    "name checking",
    "pypi automation",
    "developer tooling",
    "package discovery",
    "cli utilities",
    "python packaging"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Environment :: Console",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.packages.find]
include = ["nscout"]

[project.scripts]
nscout = "nscout.cli:main"
